<resources>
    <string name="app_name">WorkOut</string>
    <string name="calendar">Calendar</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="messages">Messages</string>
    <string name="welcome">Hello!</string>
    <string name="workout">WorkOut</string>
    <string name="usernameTextDescription">Enter your new username</string>
    <string name="back_image" />
    <string name="home">Home</string>
    <string name="ratings">Ratings</string>
    <string name="register">Register</string>
    <string name="account">Account</string>
    <string name="server_client_id">297334655599-g38pkumooanurin9ob62t56cmqoe2goc.apps.googleusercontent.com</string>
    <string name="search_button">Search</string>
    <string name="business">business</string>
    <string name="update">Update</string>
    <string name="classes">Classes</string>
    <string name="status">status</string>
    <string name="reviews">Reviews</string>
    <string name="recenter_map">Recenter map</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="security">Security</string>
    <string name="delete_account">Delete account</string>
    <string name="class_name">Class Name</string>
    <string name="class_type">Class Type</string>
    <string name="category">Category</string>
    <string name="total_capacity">Total Capacity</string>
    <string name="course_description">Course Description</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title">title</string>
    <string name="add_class">Add class</string>
    <string name="login">Login</string>
    <string name="username_input">Username:</string>
    <string name="password">Password:</string>
    <string name="or_sign_in_with_google">Or sign in with google:</string>
    <string name="google_sign_in">google sign in</string>
    <string name="don_t_have_an_account_sign_up_as">Don\'t have an account? Sign up as</string>
    <string name="client">Client</string>
    <string name="logout">Logout</string>
    <string name="policy">Policy</string>
    <string name="rate_the_business">Rate the business</string>
    <string name="write_a_comment_on_the_business">Write a comment on the business...</string>
    <string name="rate">Rate</string>
    <string name="phone">Phone:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="policy_input">Policy:</string>
    <string name="example_no_refunds_24_hours_before_class">Example: No refunds 24 hours before class</string>
    <string name="enter_the_name_of_city">Enter the name of city</string>
    <string name="first_name">First Name:</string>
    <string name="gender">Gender:</string>
    <string name="last_name">Last Name:</string>
    <string name="birth_date">Birth Date:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search_for_class">Search for Class</string>
    <string name="search">Search</string>
    <string name="distance_km">Distance (km)</string>
    <string name="select_start_n_time">Select Start \n Time</string>
    <string name="select_end_n_time">Select End \n Time</string>
    <string name="list">List</string>
    <string name="search_results">Search Results</string>
    <string name="no_businesses_found">No businesses found.</string>
    <string name="save_changes">Save changes</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_city_here">Enter your city here</string>
    <string name="deleting_the_account_will_permanently_erase_all_data">Deleting the account will permanently erase all data.</string>
    <string name="country">Country:</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="business_name">Business Name</string>
    <string name="_0">(0)</string>
    <string name="nyc">NYC</string>
    <string name="_123_main_st">123 Main St.</string>
    <string name="_555_123_4567">(555) 123-4567</string>
    <string name="courses_list">Courses list</string>
    <string name="show_all_courses">SHOW ALL COURSES</string>
    <string name="course_name">Course Name</string>
    <string name="time_18_00_19_00">Time: 18:00 – 19:00</string>
    <string name="profile_image">Profile Image</string>
    <string name="username">Username</string>
    <string name="this_is_the_customer_s_review">This is the customer\'s review...</string>
    />
    />
</resources>