<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/profile_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/profile_icon"
        android:contentDescription="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/mapButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/map_icon_transparent"
        android:contentDescription="@string/map"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarButton" />

    <ImageButton
        android:id="@+id/messagesButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/messages_icon"
        android:contentDescription="@string/messages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/historyButton"
        app:layout_constraintTop_toTopOf="@id/calendarButton" />

    <ImageButton
        android:id="@+id/calendarButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="500dp"
        android:background="@drawable/generated_calendar_image_button_transparent_smaller"
        android:contentDescription="@string/calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/historyButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/history_icon"
        android:contentDescription="@string/history"
        app:layout_constraintEnd_toStartOf="@+id/messagesButton"
        app:layout_constraintStart_toEndOf="@+id/calendarButton"
        app:layout_constraintTop_toTopOf="@+id/calendarButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/workout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/searchButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mapButton"
        app:layout_constraintTop_toTopOf="@+id/mapButton"
        android:contentDescription="@string/search_button"
        app:srcCompat="@drawable/search_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>