<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="332dp"
        android:layout_height="114dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/account"
        android:src="@color/material_dynamic_primary90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        android:fontFamily="serif"
        app:layout_constraintTop_toTopOf="@+id/backgroundImage"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Edit_profileButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/material_dynamic_primary90"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/SecurityButton"
        app:layout_constraintEnd_toEndOf="@id/SecurityButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/backgroundImage"
        app:layout_constraintTop_toBottomOf="@+id/backgroundImage" />

    <Button
android:id="@+id/SecurityButton"
android:layout_width="200dp"
android:layout_height="wrap_content"
android:layout_marginTop="20dp"
android:layout_marginBottom="20dp"
android:backgroundTint="@color/material_dynamic_primary90"
android:text="@string/security"
android:textColor="@color/black"
app:layout_constraintBottom_toBottomOf="@id/Edit_profileButton"
app:layout_constraintEnd_toEndOf="@id/Delete_accountButton"
app:layout_constraintTop_toBottomOf="@+id/Edit_profileButton"
app:layout_constraintVertical_bias="0.0" />

<Button
android:id="@+id/Delete_accountButton"
android:layout_width="200dp"
android:layout_height="wrap_content"
android:layout_marginStart="30dp"
android:layout_marginTop="20dp"
android:layout_marginBottom="20dp"
android:backgroundTint="@color/material_dynamic_primary90"
android:text="@string/delete_account"
android:textColor="@color/black"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/SecurityButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>